k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oam-loxilb
  labels:
    app: oam-loxilb
    version: v1.0.0
